# slopguard-env

./: .gitignore  endpoints.toml  eval.toml  pyproject.toml  train.toml
.claude/skills/brainstorm/: SKILL.md
.claude/skills/browse-environments/: SKILL.md
.claude/skills/create-environments/: SKILL.md
.claude/skills/evaluate-environments/: SKILL.md
.claude/skills/optimize-with-environments/: SKILL.md
.claude/skills/review-environments/: SKILL.md
.claude/skills/train-with-environments/: SKILL.md
environments/slop_guard_env/: README.md  pyproject.toml  slop_guard.py  slop_guard_env.py
environments/slop_guard_env/.prime/: .env-metadata.json
