[project]
name = "slop-guard-env"
version = "0.1.0"
description = "RL environment using slop-guard as a continuous reward signal for anti-slop prose generation"
tags = ["single-turn", "creative-writing", "rule-based"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["verifiers>=0.1.3.post0", "datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["slop_guard_env.py", "slop_guard.py"]
